dataset1235/2025-2/1379599236/users/3062747507/executions/2110095464_4011687730.log
== SUBMISSION (2025-08-25 19:22:05)
-- CODE: 
L = float(input()
f = L*2/3
v = L - f
print(round(v,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
---- correct output:
3.333
-- ERROR:
File "XXXX", line 1
    L = float(input()
             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
7
---- correct output:
2.333
-- ERROR:
File "XXXX", line 1
    L = float(input()
             ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.5
---- correct output:
1.167
-- ERROR:
File "XXXX", line 1
    L = float(input()
             ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
15
---- correct output:
5.0
-- ERROR:
File "XXXX", line 1
    L = float(input()
             ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.0
---- correct output:
0.333
-- ERROR:
File "XXXX", line 1
    L = float(input()
             ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
---- correct output:
6.667
-- ERROR:
File "XXXX", line 1
    L = float(input()
             ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:22:13)
-- CODE: 
L = float(input())
f = L*2/3
v = L - f
print(round(v,3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.0
---- correct output:
3.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 3:
---- input:
3.5
---- correct output:
1.167
---- user output:
1.167
-- TEST CASE 4:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- TEST CASE 5:
---- input:
1.0
---- correct output:
0.333
---- user output:
0.333
-- TEST CASE 6:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
